Refactors duplicate code in menuItemController